--- a/common_msg/CMakeLists.txt
+++ b/common_msg/CMakeLists.txt
@@ -53,12 +53,12 @@ add_message_files(
   position.msg
 )
 
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+# Generate services in the 'srv' folder
+ add_service_files(
+   FILES
+   hypotenuse.srv
+
+ )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
